add new section, and articles

--- a/index.html
+++ b/index.html
@@ -48,11 +48,77 @@
        </section>
    
        <section class="section-work">
-        <div class="container"></div>
+        <div class="container">
+          <div class="work__txt">
+            <h2 class="title__work">Meet the Paytient Card.</h2>
+            <p class="sub__work">
+              Sponsor Paytient cards for your group alongside your health plan, HSA/FSA, and other health benefits to ensure your people always have a way to pay their out-of-pocket costs.
+            </p>
+            <p class="sub__work">
+              Once a member uses their card to pay for care, they’ll select a personalized repayment plan that turns their bill into a series of smaller payments over time — always without interest or fees.
+            </p>
+            <button class="work__btn how-work">
+              How it Works
+            </button>
+            <button class="work__btn main-btn">Get in touch</button>
+          </div>
+            <picture class="work__pic">
+              <source srcset="img/2-section.png">
+              <img class="work__img" src="img/2-section.png" alt="pay-card">
+            </picture>
+          </div>
        </section>
    
-       <section>
-         
+       <section class="section-members">
+        <div class="container">
+          <div class="part-1">
+            <figure class="figure">
+              <figcaption class="figcap">Our members love us</figcaption>
+              <blockquote class="cite">
+                <p class="cite__sub">"Paytient was a blessing to me... It covered the cost of my glasses at a time when money was tight."</p>
+              </blockquote>
+            </figure>
+            <p class="members__sub">How Paytient works for:</p>
+            <ul class="members__list">
+              <li class="members__item">Employers</li>
+              <li class="members__item">Insurers</li>
+              <li class="members__item">Health Systems</li>
+            </ul>
+          </div>
+          <div class="part-2">
+            <article class="article employers__article">
+              <h3 class="article__title">Employers</h3>
+              <p class="article__sub">
+                Employees receive a Paytient card they can use to pay out-of-pocket expenses for medical, dental, vision, pharmacy, behavioral health, and veterinary care.
+              </p>
+              <p class="article__sub employers__sub">
+                Cardholders swipe their card at the point of care and split their balance into easier-to-manage payments automatically deducted from future paychecks or another linked payment method.
+              </p>
+              <bottom class="main-btn employers__btn">Learn more</bottom>
+              <p class="link__sub">Are you a broker or consultant? <a class="employers__link" href="#">Right this way.</a></p>
+            </article>
+            <article class="article">
+              <h3 class="article__title">Insurers</h3>
+              <p class="article__sub insures__sub">
+                Members receive a Paytient card with their health plan that empowers them to pay out of pocket medical expenses as well as dental and vision care. In a crowded market, Paytient helps insurers differentiate their offering to attract and retain more members.
+              </p>
+              <bottom class="main-btn">Learn more</bottom>
+            </article>
+            <article class="article">
+              <h3 class="article__title">Health Systems</h3>
+              <p class="article__sub health__sub">Health systems can subsidize the cost of the Paytient card for local employers who want to offer it to their teams. Employees can use the card to get care with the health system's facilities and physician groups, which helps attract more commercially-insured patients.</p>
+              <bottom class="main-btn">Learn more</bottom>
+            </article>
+          </div>
+          <div class="part-3">
+            <figure class="figure">
+              <blockquote class="cite">
+                <p class="cite__sub">"They care about our employees just like their own. They've made it a smooth roll out and are willing to help in any way they can. I highly recommend Paytient and the great people there!"</p>
+              </blockquote>
+              <figcaption class="figcap">– Vanessa R. Business Officer, Centralia Public School District</figcaption>
+            </figure>
+          </div>
+        </div>
        </section>
    
        <section>
