add new form-section

--- a/index.html
+++ b/index.html
@@ -139,10 +139,12 @@
 
        <section class="form-section">
          <div class="container">
+          <h3 class="form__title">We send great emails for benefits leaders. Let’s stay in touch—</h3>
           <form class="form" action="https://jsonplaceholder.typicode.com/posts" method="POST">
-            <label for="send__email" class="form__title">We send great emails for benefits leaders. Let’s stay in touch—</label>
-            <input class="input__email" type="email" id="send__email" minlength="3" maxlength="64" value="youremail@post.com">
-            <button type="submit">Submit</button>
+            <label for="send__email">
+            <input class="input__email" type="email" id="send__email" minlength="3" maxlength="64" placeholder="youremail@post.com">
+            </label>
+            <button class="form__btn" type="submit">Ok</button>
            </form>
            <p class="form__warning">By signing up, you're confirming that you agree with our <a class="form__link" href="#" target="_blank">Terms</a>. </p>
          </div>
