--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
        <section class="section-work">
         <div class="container">
           <div class="work__txt">
+            <button class="work__btn how-work">
+              How it Works
+            </button>
             <h2 class="title__work">Meet the Paytient Card.</h2>
             <p class="sub__work">
               Sponsor Paytient cards for your group alongside your health plan, HSA/FSA, and other health benefits to ensure your people always have a way to pay their out-of-pocket costs.
@@ -57,14 +60,11 @@
             <p class="sub__work">
               Once a member uses their card to pay for care, they’ll select a personalized repayment plan that turns their bill into a series of smaller payments over time — always without interest or fees.
             </p>
-            <button class="work__btn how-work">
-              How it Works
-            </button>
             <button class="work__btn main-btn">Get in touch</button>
           </div>
             <picture class="work__pic">
-              <source srcset="img/2-section.png">
-              <img class="work__img" src="img/2-section.png" alt="pay-card">
+              <source srcset="img/2-section.webp">
+              <img class="work__img" src="img/2-section.webp" alt="pay-card">
             </picture>
           </div>
        </section>
@@ -94,7 +94,7 @@
               <p class="article__sub employers__sub">
                 Cardholders swipe their card at the point of care and split their balance into easier-to-manage payments automatically deducted from future paychecks or another linked payment method.
               </p>
-              <bottom class="main-btn employers__btn">Learn more</bottom>
+              <button class="main-btn employers__btn">Learn more</button>
               <p class="link__sub">Are you a broker or consultant? <a class="employers__link" href="#">Right this way.</a></p>
             </article>
             <article class="article">
@@ -102,12 +102,12 @@
               <p class="article__sub insurers__sub">
                 Members receive a Paytient card with their health plan that empowers them to pay out of pocket medical expenses as well as dental and vision care. In a crowded market, Paytient helps insurers differentiate their offering to attract and retain more members.
               </p>
-              <bottom class="main-btn">Learn more</bottom>
+              <button class="main-btn">Learn more</button>
             </article>
             <article class="article">
               <h3 class="article__title">Health Systems</h3>
               <p class="article__sub health__sub">Health systems can subsidize the cost of the Paytient card for local employers who want to offer it to their teams. Employees can use the card to get care with the health system's facilities and physician groups, which helps attract more commercially-insured patients.</p>
-              <bottom class="main-btn">Learn more</bottom>
+              <button class="main-btn">Learn more</button>
             </article>
           </div>
           <div class="part-3">
@@ -124,9 +124,9 @@
        <section class="section-meet">
         <div class="container">
           <div class="meet">
-            <img src="img/meet__1st.png" alt="member of team photo" class="meet__pic meet__pic--1">
-            <img src="img/meet__2nd.png" alt="team photo" class="meet__pic meet__pic--2">
-            <img src="img/meet__3d.png" alt="people team" class="meet__pic meet__pic--3">
+            <img src="img/meet__1st.webp" alt="member of team photo" class="meet__pic meet__pic--1">
+            <img src="img/meet__2nd.webp" alt="team photo" class="meet__pic meet__pic--2">
+            <img src="img/meet__3d.webp" alt="people team" class="meet__pic meet__pic--3">
           </div>
           <div class="meet__about">
             <h3 class="meet__title">Meet the team</h3>
