add new img for media

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             <button class="work__btn main-btn">Get in touch</button>
           </div>
             <picture class="work__pic">
+              <source srcset="img/480-2-section.webp" media="(max-width: 480px)">
               <source srcset="img/2-section.webp">
               <img class="work__img" src="img/2-section.webp" alt="pay-card">
             </picture>
