add new class for links

--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
             </figure>
             <p class="section-members__sub">How Paytient works for:</p>
             <ul class="section-members__list">
-              <li class="section-members__item">Employers</li>
-              <li class="section-members__item">Insurers</li>
-              <li class="section-members__item">Health Systems</li>
+              <li class="section-members__item"><a class="section-members__link" href="#employ">Employers</a></li>
+              <li class="section-members__item"><a class="section-members__link" href="#insurers">Insurers</a></li>
+              <li class="section-members__item"><a class="section-members__link" href="#health">Health Systems</a></li>
             </ul>
           </div>
           <div class="part-2">
-            <article class="article part-2__article">
+            <article class="article part-2__article" id="employ">
               <h3 class="article__title">Employers</h3>
               <p class="article__sub">
                 Employees receive a Paytient card they can use to pay out-of-pocket expenses for medical, dental, vision, pharmacy, behavioral health, and veterinary care.
@@ -100,14 +100,14 @@
               <button class="main-btn part-2__btn">Learn more</button>
               <p class="part-2__descr">Are you a broker or consultant? <a class="part-2__link" aria-label="Right this way" href="#">Right this way.</a></p>
             </article>
-            <article class="article">
+            <article class="article" id="insurers">
               <h3 class="article__title part-2__insurers-title">Insurers</h3>
               <p class="article__sub part-2__insurers-sub">
                 Members receive a Paytient card with their health plan that empowers them to pay out of pocket medical expenses as well as dental and vision care. In a crowded market, Paytient helps insurers differentiate their offering to attract and retain more members.
               </p>
               <button class="main-btn">Learn more</button>
             </article>
-            <article class="article">
+            <article class="article" id="health">
               <h3 class="article__title">Health Systems</h3>
               <p class="article__sub part-2__health-sub">Health systems can subsidize the cost of the Paytient card for local employers who want to offer it to their teams. Employees can use the card to get care with the health system's facilities and physician groups, which helps attract more commercially-insured patients.</p>
               <button class="main-btn">Learn more</button>
